# AOG_MultiHead_Network

./: .gitignore  CLEAN_REPO_KEEP_V18_V39_V42.sh  README.md  README_gpu_instance_slot_aog.md  README_instance_slot_aog.md  README_strict_aog.md  STRICT_AOG_V18_V39_V42_SUMMARY.md  pyproject.toml  requirements.txt  run.ipynb  run_pra_aog.ipynb  run_stage1.ipynb  strict_aog_v18_revised_diagnostics.ipynb
configs/: default.yaml  legacy_v51.yaml  minimal_debug.yaml  stage1_quality_upgrade.yaml
docs/: BIDIRECTIONAL_HIER_STAGE1.md  GPU_TERMINAL_CACHE.md  HIERARCHICAL_PRA_AOG.md  PRA_AOG_LITE.md  PRA_AOG_V3_CORE_VALIDITY.md
notebooks/: run_bidir_stage1_pra_aog_v5.ipynb  run_gpu_terminal_cache_pra_aog_v6.ipynb
scripts/: build_aog_hkg.py  build_gpu_instance_aog.py  build_hier_pra_aog.py  build_hkg.py  build_instance_aog.py  build_pra_aog.py  build_strict_aog.py  cache_bidir_stage1_terminals.py  cache_gpu_instance_components.py  cache_strict_aog_terminals.py  cache_strict_aog_terminals_gpu.py  compare_resnet_partimagenet_gatys_cue_conflict.py  infer_hier_pra_aog.py  infer_pra_aog.py  repair_strict_aog_cache_manifest.py  run_bidir_stage1.py  run_hier_pra_aog.py  run_pipeline.py  train_pra_aog.py  train_stage2.py  train_strict_aog.py
tests/: test_aog_hkg_stage2.py  test_bidir_stage1.py  test_gpu_instance_aog.py  test_gpu_terminals.py  test_hier_pra_aog.py  test_instance_aog.py  test_partimagenet_layout.py  test_partimagenet_paths.py  test_pra_aog.py  test_pra_aog_core_validity.py  test_relations.py  test_schema.py  test_stage1.py  test_stage1_quality_upgrade.py  (+3 more)
(+152 files in other folders)
